--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="builds/Windows_3/Chemlaugh.exe"
+export_path="builds/Entrega_0/Windows/Chemlaugh.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="builds/Web_0/Chemlaugh.html"
+export_path="builds/Entrega_0/Web/Chemlaugh.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
