--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -37,7 +37,7 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="Akelarre"
+application/company_name="Akelarre Studio"
 application/product_name="ChemLaugh"
 application/file_description=""
 application/copyright=""
